<?xml version="1.0"?>
<package>
  <name>rwt_gui</name>
  <version>0.0.0</version>
  <description>The rwt_gui package</description>

  <maintainer email="furushchev@todo.todo">furushchev</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roslibjs</run_depend>
  <run_depend>rwt_utils_3rdparty</run_depend>
</package>
